--- a/src/views/form.pug
+++ b/src/views/form.pug
@@ -3,6 +3,8 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Document
+    block styles 
+      link(rel="stylesheet", type='text/css', href="form.css")
 
   body
     h1 Form
